tests/fixtures/invalid/multi/circular_imports/src/circ/lib.gcl
// Forward edge: `circ` depends on `circ.back`.
import circ.back.{ y };

param x: Dimensionless = 1.0;
